Fixed a spacing issue with the navbar

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,11 +3,7 @@
   margin: 0 auto;
 }
 
-.nav-item {
-  margin-right: 100px;
-}
-
 .navbar-brand {
-  position: absolute;
   margin: 0;
+  position: absolute;
 }
